# bb_sidex

./: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  port_manifest.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidex-ui.conf.json
src-tauri/capabilities/: default.json
src-tauri/extension-host/: host.cjs
src-tauri/src/: lib.rs
src-tauri/src/commands/: extensions.rs  fs.rs  index.rs  logging.rs  mod.rs  os.rs  process.rs  search.rs  storage.rs  terminal.rs  text.rs  window.rs
src/vs/base/common/: event.ts  lifecycle.ts
src/vs/base/parts/ipc/common/: ipc.tauri.ts
src/vs/code/browser/: workbench.main.ts
src/vs/platform/files/browser/: fileService.ts
src/vs/platform/files/common/: files.ts
src/vs/platform/files/node/watcher/: watcherClient.ts
src/vs/platform/instantiation/common/: instantiation.ts
src/vs/workbench/: workbench.common.main.ts
src/vs/workbench/browser/: web.main.ts  workbench.ts
src/vs/workbench/browser/parts/editor/: editorPart.ts
src/vs/workbench/browser/parts/sidebar/: sidebarPart.ts
src/vs/workbench/browser/parts/statusbar/: statusbarPart.ts
src/vs/workbench/contrib/files/: fileExplorer.ts
src/vs/workbench/contrib/scm/browser/: tauriGit.contribution.ts
src/vs/workbench/contrib/search/: searchView.ts
src/vs/workbench/contrib/webview/electron-browser/: webviewElement.ts  windowIgnoreMenuShortcutsManager.ts
src/vs/workbench/services/dialogs/browser/: fileDialogService.ts
