[package]
name = "sidex"
version = "0.1.0"
description = "SideX - A Tauri-based code editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "SideX"
path = "src/main.rs"

[lib]
name = "sidex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
notify = { version = "7", features = ["macos_fsevent"] }
portable-pty = "0.8"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
hostname = "0.4"
dirs = "5"
reqwest = { version = "0.12", features = ["rustls-tls"] }

# Compression & encoding
flate2 = "1"
zip = "2"
base64 = "0.22"

# Crypto
sha2 = "0.10"
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# Path utilities
pathdiff = "0.2"
glob = "0.3"
globset = "0.4"

# Search indexing
dashmap = "6"
rayon = "1.10"
regex = "1"

# Document management
memmap2 = "0.9"
encoding_rs = "0.8"

# Process & terminal management
crossbeam = "0.8"
which = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
